--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.1.0",
     "istanbul": "^0.3.13",
+    "jshint-stylish": "^1.0.1",
     "mocha": "^2.2.1",
     "should": "^5.2.0"
   },
