--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "brahma is a schedule task library",
   "main": "index.js",
   "scripts": {
-    "test": "make cover"
+    "test": "make all"
   },
   "repository": {
     "type": "git",
